--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -6,4 +6,5 @@ html
     p firstName : #{users.firstName}
     p lastName : #{users.lastName}
     p email : #{users.email}
+    p phone : #{users.phone}
     p password = yea, right.
