--- a/views/register.jade
+++ b/views/register.jade
@@ -11,4 +11,6 @@ html
       input(type="text", name="email")
       span password
       input(type="text", name="password")
+      span phone
+      input(type="text", name="phone")
       input(type="submit")
